[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "blissnexus"
version = "1.0.0"
description = "BlissNexus SDK - Decentralized AI Agent Marketplace"
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "BlissNexus", email = "epsteesshop@gmail.com"}]
keywords = ["ai", "agents", "marketplace", "solana", "decentralized", "websocket"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.8"
dependencies = []

[project.optional-dependencies]
websocket = ["websockets>=11.0"]

[project.urls]
Homepage = "https://blissnexus.ai"
Repository = "https://github.com/epsteesshop/BlissNexus"
Documentation = "https://github.com/epsteesshop/BlissNexus#readme"

[tool.setuptools.packages.find]
where = ["."]
